--- a/datascience-notebook/Dockerfile
+++ b/datascience-notebook/Dockerfile
@@ -8,16 +8,6 @@ RUN apt update && \
     && apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
-RUN pip install \
-    pandas==0.25.3 \
-    geopandas \
-    folium \
-    descartes \
-    mysql-connector-python \
-    python-igraph \
-    modin[ray]==0.6.3 \
-    git+https://github.com/sevamoo/SOMPY.git
-
 
 # R packages including IRKernel which gets installed globally.
 RUN conda install --quiet --yes \
@@ -38,3 +28,12 @@ RUN conda install --quiet --yes \
     conda clean --all -f -y && \
     fix-permissions $CONDA_DIR && \
     fix-permissions /home/$NB_USER
+
+RUN pip install \
+    geopandas \
+    folium \
+    descartes \
+    mysql-connector-python \
+    python-igraph \
+    modin[all] \
+    git+https://github.com/sevamoo/SOMPY.git
