[style] Data path as variable.

--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ COMPOSE_PROJECT_NAME=jupyterhub
 
 # The server where this JupyterHub server is hosted
 HOST=euler2.mat.upm.es
+
+HOST_DATA_PATH=/media/flash/resilience_jupyterhub
