--- a/jupyterhub/Dockerfile
+++ b/jupyterhub/Dockerfile
@@ -1,8 +1,8 @@
-FROM jupyterhub/jupyterhub:1.0
+FROM jupyterhub/jupyterhub:1.2
 
 COPY jupyterhub_config.py .
 
-RUN wget https://github.com/jupyterhub/jupyterhub/raw/master/examples/cull-idle/cull_idle_servers.py
+RUN  curl -O https://github.com/jupyterhub/jupyterhub/raw/master/examples/cull-idle/cull_idle_servers.py
 
 RUN pip install \
     dockerspawner==0.11.1
