[fix] Simplification and final config.

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # A name for this Docker Compose application, it can be whatever you like
 COMPOSE_PROJECT_NAME=jupyterhub
 
-# The server where this JupyterHub server is hosted
-HOST=euler2.mat.upm.es
-
+DOCKER_JUPYTER_CONTAINER=local/datascience-notebook
+DOCKER_NETWORK_NAME=jupyterhub
 HOST_DATA_PATH=/media/flash/resilience_jupyterhub
+ADMIN_USER=root
