[chore] New base and dependencies.

--- a/datascience-notebook/Dockerfile
+++ b/datascience-notebook/Dockerfile
@@ -1,53 +1,75 @@
-FROM jupyter/datascience-notebook
+FROM jupyter/minimal-notebook
 
 USER root
 
-RUN apt update && \
-    apt install -y --no-install-recommends \
-    libmysqlclient-dev \
-    && apt-get clean && \
+# ffmpeg for matplotlib anim
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends ffmpeg \
+                                               graphviz && \
     rm -rf /var/lib/apt/lists/*
 
+USER $NB_UID
 
-# R packages including IRKernel which gets installed globally.
-RUN conda install --quiet --yes \
-    'r-islr' \
-    'r-plot3d' \
-    'r-rgl' \
-    'r-car' \
-    'r-mass' \
-    'r-class' \
-    'r-fnn' \
-    'r-tree' \
-    'r-randomforest' \
-    'r-gbm' \
-    'r-e1071' \
-    'r-cluster' \
-    'r-som' \
-    && \
-    conda clean --all -f -y && \
+RUN pip install --upgrade pip && \
+    pip install --no-cache-dir \
+        'ipywidgets' \
+        'jupyter_contrib_nbextensions' \
+        'matplotlib' \
+        'widgetsnbextension'
+
+# Activate ipywidgets extension in the environment that runs the notebook server
+RUN jupyter nbextension enable --py widgetsnbextension --sys-prefix && \
+    # Also activate ipywidgets extension for JupyterLab
+    # Check this URL for most recent compatibilities
+    # https://github.com/jupyter-widgets/ipywidgets/tree/master/packages/jupyterlab-manager
+    jupyter labextension install @jupyter-widgets/jupyterlab-manager@^2.0.0 --no-build && \
+    jupyter labextension install @bokeh/jupyter_bokeh@^2.0.0 --no-build && \
+    jupyter labextension install jupyter-matplotlib --no-build && \
+    jupyter lab build && \
+    jupyter contrib nbextension install --sys-prefix && \
+    #jupyter labextension install jupyterlab-dash && \
+    npm cache clean --force && \
+    rm -rf $CONDA_DIR/share/jupyter/lab/staging && \
+    rm -rf /home/$NB_USER/.cache/yarn && \
+    rm -rf /home/$NB_USER/.node-gyp && \
     fix-permissions $CONDA_DIR && \
     fix-permissions /home/$NB_USER
 
-RUN pip install \
-    geopandas \
-    pandarallel \
-    gpxpy \
-    geopy \
-    joblib \
-    folium \
-    descartes \
-    plotly \
+# Import matplotlib the first time to build the font cache.
+ENV XDG_CACHE_HOME /home/$NB_USER/.cache/
+RUN MPLBACKEND=Agg python -c "import matplotlib.pyplot" && \
+    fix-permissions /home/$NB_USER
+
+RUN pip install --upgrade pip && \
+    pip install --no-cache-dir \
     arcgis \
+    autopep8 \
+    bokeh \
     dash \
     dash-core-components \
     dash-html-components \
-    mysql-connector-python \
-    python-igraph \
-    jupyter_contrib_nbextensions \
-    folium \
+    dask \
     descartes \
-    mysql-connector-python \
-    python-igraph \
+    folium \
+    geopandas \
+    geopy \
+    gpxpy \
+    graphviz \
+    ipyleaflet \
+    joblib \
+    jupyter_contrib_nbextensions \
+    jupyterlab-dash \
+    mlinsights \
     modin[all] \
-    git+https://github.com/sevamoo/SOMPY.git
+    mysql-connector-python \
+    pandarallel \
+    partridge[full] \
+    plotly \
+    psutil \
+    psycopg2-binary \
+    pyquickhelper \
+    python-igraph \
+    git+https://github.com/sevamoo/SOMPY.git \
+    sklearn \
+    sqlalchemy \
+    xgboost
